--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "starter-admin-lteangular",
+    "name": "angular11-modal-crud",
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
@@ -19,15 +19,23 @@
         "@angular/platform-browser": "~11.0.1",
         "@angular/platform-browser-dynamic": "~11.0.1",
         "@angular/router": "~11.0.1",
+        "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+        "angular-datatables": "^11.1.0",
+        "bootstrap": "^4.6.0",
+        "datatables.net": "^1.10.24",
+        "datatables.net-dt": "^1.10.24",
+        "jquery": "^3.6.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.1100.2",
-        "@angular/cli": "~11.0.2",
+        "@angular/cli": "^11.0.7",
         "@angular/compiler-cli": "~11.0.1",
+        "@types/datatables.net": "^1.10.19",
         "@types/jasmine": "~3.6.0",
+        "@types/jquery": "^3.5.5",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
         "jasmine-core": "~3.6.0",
